--- a/UI/WebStore/Views/Shared/Components/Sections/Default.cshtml
+++ b/UI/WebStore/Views/Shared/Components/Sections/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<WebStore.Domain.ViewModels.SectionViewModel>
 
-<h2>Category</h2>
+<h2>Категории</h2>
 <div class="panel-group category-products" id="accordian">
     <!--category-productsr-->
 
