--- a/UI/WebStore/Views/Home/ProductDetails.cshtml
+++ b/UI/WebStore/Views/Home/ProductDetails.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="left-sidebar">
-                    <h2>Category</h2>
+                    <h2>Категория</h2>
                     <div class="panel-group category-products" id="accordian">
                         <!--category-productsr-->
                         <div class="panel panel-default">
