--- a/UI/WebStore/Areas/Admin/Views/Home/ProductList.cshtml
+++ b/UI/WebStore/Areas/Admin/Views/Home/ProductList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebStore.Domain.Entities.Product>
+﻿@model IEnumerable<WebStore.Domain.DTO.Products.ProductDTO>
 
 @{
     ViewData["Title"] = "Список товаров";
@@ -13,11 +13,11 @@
     <tr>
         <th></th>
 
-        <th>@Html.DisplayNameFor(product => product.Name)</th>
+        @*<th>@Html.DisplayNameFor(product => product.Name)</th>
         <th>@Html.DisplayNameFor(product => product.Brand)</th>
         <th>@Html.DisplayNameFor(product => product.Section)</th>
         <th>@Html.DisplayNameFor(product => product.ImageUrl)</th>
-        <th>@Html.DisplayNameFor(product => product.Price)</th>
+        <th>@Html.DisplayNameFor(product => product.Price)</th>*@
 
         <th></th>
     </tr>
