--- a/UI/WebStore/Views/_ViewImports.cshtml
+++ b/UI/WebStore/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using WebStore
+@using WebStore.Domain.ViewModels
+@using WebStore.Domain.ViewModels.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebStore
