--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -15,7 +15,9 @@
                 <partial name="Partial/_LeftSideBar" />
             </div>
 
-            <partial name="Partial/_FeaturesItem" model="@Model.Products" />
+            <div id="catalog-items-container">
+                <partial name="Partial/_FeaturesItem" model="@Model.Products" />
+            </div>
             
             <paging page-model="@Model.PageViewModel"
                     page-action="Shop"
@@ -25,4 +27,17 @@
         </div>
     </div>
 </section>
+
+@section Scripts
+{
+    <script src="~/lib/jquery-loading-overlay/loadingoverlay.min.js"></script>
+    <script src="~/js/Shop/ProductItems.js" asp-append-version="true"></script>
+    <script>
+        $(function() {
+            ProductItems.init({
+                getUrl: "@Url.Action("GetFiltratedItems", "Catalog")"
+            });
+        })
+    </script>
+}
 
