--- a/UI/WebStore/Views/Shared/Partial/_Header.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_Header.cshtml
@@ -86,6 +86,8 @@
                                 <a is-active-route ignore-action asp-controller="WebAPITest" asp-action="Index">Тестовый раздел<i class="fa fa-angle-down"></i></a>
                                 <ul role="menu" class="sub-menu">
                                     <li><a is-active-route asp-controller="WebAPITest" asp-action="Index">Тестирование Web-API</a></li>
+                                    <li><a is-active-route asp-controller="AjaxTest" asp-action="Index">Тестирование AJAX</a></li>
+                                    <li><a is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">Тестирование SignalR</a></li>
                                 </ul>
                             </li>
                         </ul>
